--- a/DevcamperBackendAPI/package.json
+++ b/DevcamperBackendAPI/package.json
@@ -10,9 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "morgan": "^1.10.0"
+    "mongoose": "^8.5.1",
+    "morgan": "^1.10.0",
+    "node-geocoder": "^4.3.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
